--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,7 @@ body{
   background:var(--bg);
   color:var(--text);
   line-height:1.7;
+  padding: 0 10px 0 10px;
 }
 
 /* Ссылки заметные */
@@ -157,10 +158,10 @@ h1{
   gap:12px;
 }
 
-/* Responsive */
+
 @media (max-width: 980px){
   .layout{grid-template-columns:1fr}
-  .sidebar{position:static}
+  .sidebar{display:none;}
   .toc--mobile{display:block; margin-bottom:12px}
   .toc--desktop{display:none}
 }
